# raytrace-webgpu

./: CMakeLists.txt  README.md
.cache/clangd/index/: dawn_glfw.cpp.EAEB2C93E000F770.idx  dawn_glfw.h.7112B68E3E8401D0.idx  main.c.CAED958A4FE8B5AF.idx  main.cpp.0C9BDA154929D055.idx
examples/: spheres.yaml
shaders/: CMakeLists.txt  compute.wgsl  fragment.wgsl  vertex.wgsl
src/: CMakeLists.txt  code.hpp  hittable.cpp  hittable.hpp  load.cpp  load.hpp  main.cpp  plane.cpp  plane.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp
src/hittables/: hittable.cpp  hittable.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
src/materials/: dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  material.hpp  metal.cpp  metal.hpp
